# trans

./: .client.py.swp  \  a.out  add.c  bridge.c  bridge.cc  bridge.h  client  client.py  consts.pb.go  demo_client.go  demo_server.go  go.mod  go.sum  interface.h  make_xmit.sh  msg.pb.go  msg.proto  msg_pb2.py  server  version
demo/: CMakeLists.txt
demo/client/: CMakeCache.txt  CMakeLists.txt  client.cc  client.go  client.h  local_main.cc  loopback_main.cc  main.cc
demo/common/: consts.h
demo/server/: CMakeLists.txt  local_main.cc  loopback_main.cc  main.cc  server.cc  server.go  server.h
lib/: server.go
need-to-clear/: server.py
need-to-clear/server/: server
src/client/: client.go  go.mod  go.sum  main.go
src/driver/: driver.py  sample_json.json
src/server/: go.mod  main.go  server.go
xmit/: answer.pb.go  bridge.go  client.go  core.go  go.mod  init.pb.go  signal.go
